src/network_policies/test1default-fluidos-consumer-1eb36fbefa62f407da0e955b8f0dc6651efce6b99b85d27ced07e37b87bcaab426976b Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1default-fluidos-consumer-1eb36fbefa62f407da0e955b8f0dc6651efce6b99b85d27ced07e37b87bcaab426976b
  namespace: default-fluidos-consumer-1eb36f
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: product-catalogue
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default-fluidos-consumer-1eb36f
      podSelector: {}
    ports:
    - port: 80
      protocol: TCP
